--- a/China/pom.xml
+++ b/China/pom.xml
@@ -57,6 +57,7 @@
         <paypal.version>1.4.2</paypal.version>
         <project.youtube.version>v3-rev182-1.22.0</project.youtube.version>
         <project.youtube.api-client.version>1.27.0</project.youtube.api-client.version>
+        <aliyun.version>4.1.0</aliyun.version>
         <!-- spring1.5.9 默认依赖2.9.0 其他模块可以直接使用 <jedis.version>2.9.0</jedis.version> -->
     </properties>
 
@@ -279,6 +280,12 @@
                 <groupId>com.google.apis</groupId>
                 <artifactId>google-api-services-youtube</artifactId>
                 <version>${project.youtube.version}</version>
+            </dependency>
+
+            <!--阿里云的api-->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-core</artifactId>
             </dependency>
 
             <!--&lt;!&ndash;引入第三方jar-Mas jar&ndash;&gt;-->
