微信登录，绑定手机号，发送验证码，删除多余代码

--- a/China/pom.xml
+++ b/China/pom.xml
@@ -286,6 +286,7 @@
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-core</artifactId>
+                <version>${aliyun.version}</version>
             </dependency>
 
             <!--&lt;!&ndash;引入第三方jar-Mas jar&ndash;&gt;-->
