--- a/China/ravv-component/pom.xml
+++ b/China/ravv-component/pom.xml
@@ -51,5 +51,9 @@
             <artifactId>weixin-java-common</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
