--- a/China/ravv-admin-rest/src/main/resources/application-daily.yml
+++ b/China/ravv-admin-rest/src/main/resources/application-daily.yml
@@ -13,7 +13,7 @@ spring:
       url: jdbc:mysql://120.77.217.189:3306/ravv?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
       username: ravv
       password: Ravv1688
-      db-name: ravv
+      db-name: ravv_china
       filters: log4j,wall,mergeStat
 
 logging:
