--- a/China/ravv-admin-rest/src/main/resources/application-dev.yml
+++ b/China/ravv-admin-rest/src/main/resources/application-dev.yml
@@ -15,7 +15,7 @@ spring:
       url: jdbc:mysql://47.107.236.246:3306/ravv?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
       username: root
       password: Ravv_123
-      db-name: ravv
+      db-name: ravv_china
       type: com.alibaba.druid.pool.DruidDataSource
       filters: log4j,wall,mergeStat
 logging:
