--- a/China/ravv-core/src/main/resources/quartz.properties
+++ b/China/ravv-core/src/main/resources/quartz.properties
@@ -23,7 +23,7 @@ org.quartz.jobStore.maxMisfiresToHandleAtATime=1
 ## Configure Datasources
 ##============================================================================
 org.quartz.dataSource.ravv.driver= com.mysql.jdbc.Driver
-org.quartz.dataSource.ravv.URL= jdbc:mysql://47.107.236.246:3306/ravv_china?useSSL=true&autoReconnect=true
+org.quartz.dataSource.ravv.URL= jdbc:mysql://47.107.236.246:3306/ravv_china?useSSL=false&autoReconnect=true
 org.quartz.dataSource.ravv.user=root
 org.quartz.dataSource.ravv.password=Ravv_123
 org.quartz.dataSource.ravv.maxConnections=30
