--- a/China/ravv-mall-rest/src/main/resources/application-daily.yml
+++ b/China/ravv-mall-rest/src/main/resources/application-daily.yml
@@ -49,7 +49,7 @@ wechat:
 qiniu:
   accessKey: jnIntrKoJKDbQX0wxya1VTNUTYE6DOx70SGwy_Bz
   secretKey: vJUjlYuOHe8CUkh1322Ag-ggN7ugAZq9fu2I_lgY
-  bucket: ravv
+  bucket: ravv_china
   domain: http://ravv.qiniu.farwalker.cn
 
 #app样式
