--- a/China/ravv-mall-rest/src/main/resources/application-prod.yml
+++ b/China/ravv-mall-rest/src/main/resources/application-prod.yml
@@ -50,7 +50,7 @@ wechat:
 #qiniu:
 #  accessKey: jnIntrKoJKDbQX0wxya1VTNUTYE6DOx70SGwy_Bz
 #  secretKey: vJUjlYuOHe8CUkh1322Ag-ggN7ugAZq9fu2I_lgY
-#  bucket: ravv
+#  bucket: ravv_china
 #  domain: http://ravv.qiniu.farwalker.cn
 
 # 七牛云配置
@@ -59,8 +59,8 @@ wechat:
 qiniu:
   accessKey: Mh0L0MfFlVXhgauUXh17LWEyEmIApVdwJ9QrD2Rf
   secretKey: fFydQAutvevF19DpyBs_yMY3V8oEcg2PFGMoEd6D
-  bucket: ravv
-  domain: http://ravv.img.shop.live
+  bucket: ravv_china
+  domain: http://test.ravvchina.com
 
 #app样式
 ravv:
