--- a/American/ravv-service/pom.xml
+++ b/American/ravv-service/pom.xml
@@ -70,7 +70,7 @@
 			<artifactId>google-api-services-youtube</artifactId>
 		</dependency>
 
-		<!-- paypal -->
+		<!-- pay -->
 		<dependency>
 			<groupId>com.paypal.sdk</groupId>
 			<artifactId>rest-api-sdk</artifactId>
@@ -91,6 +91,11 @@
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
 		</dependency>
     </dependencies>
 
