去掉spring-boot-devtools

--- a/American/ravv-service/pom.xml
+++ b/American/ravv-service/pom.xml
@@ -52,11 +52,12 @@
 		</dependency>
 
 		<!--spring boot 热加载-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<optional>true</optional>
-		</dependency>
+		<!--&lt;!&ndash;与mybatis plus EnumTypeHandler 类的加载有冲突&ndash;&gt;-->
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-devtools</artifactId>-->
+			<!--<optional>true</optional>-->
+		<!--</dependency>-->
 
 		<!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
 		<dependency>
