--- a/American/ravv-mall-rest/src/main/resources/application-dev.yml
+++ b/American/ravv-mall-rest/src/main/resources/application-dev.yml
@@ -16,9 +16,9 @@ jwt:
   md5-key: randomKey      #md5加密混淆key
 
 spring:
-  profiles: prod
+  profiles: dev
   datasource:
-      url: jdbc:mysql://52.53.127.206:3306/ravv?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+      url: jdbc:mysql://47.107.236.246:3306/ravv_american?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
       username: root
       password: Ravv_123
       db-name: ravv
