--- a/American/ravv-mall-rest/src/main/resources/application-dev.yml
+++ b/American/ravv-mall-rest/src/main/resources/application-dev.yml
@@ -59,8 +59,8 @@ wechat:
 qiniu:
   accessKey: Mh0L0MfFlVXhgauUXh17LWEyEmIApVdwJ9QrD2Rf
   secretKey: fFydQAutvevF19DpyBs_yMY3V8oEcg2PFGMoEd6D
-  bucket: ravv
-  domain: http://ravv.img.shop.live
+  bucket: ravv_china
+  domain: http://test.ravvchina.com
 
 #app样式
 ravv:
